--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,23 @@
+server.address=0.0.0.0
+server.port=8080
 
-server.address=52.79.239.179
-server.port=80
-
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/social?useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://52.79.239.179:3306/social?useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=social
 spring.datasource.password=mysql
 
-#spring.jpa.hibernate.ddl-auto=update
- 
-spring.jpa.erties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+# MySQL Dialect \uc124\uc815
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+server.servlet.context-path=/social
+
+logging.level.org.springframework=debug
+logging.level.org.springframework.web=debug
 
