--- a/pom.xml
+++ b/pom.xml
@@ -1,70 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.2</version>
-        <relativePath/>
-    </parent>
-    <groupId>com.se</groupId>
-    <artifactId>social</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>social</name>
-    <description>Social project for Spring Boot</description>
-    <packaging>war</packaging> <!-- WAR 프로젝트로 설정 -->
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
-    
-	<dependencies>
-	  <!-- Spring Boot Starter Web에서 제공하는 Tomcat 제외 -->
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-web</artifactId>
-        <exclusions>
-            <exclusion>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-tomcat</artifactId>
-            </exclusion>
-        </exclusions>
-    </dependency>
-
-    <!-- Spring Boot Starter Tomcat 추가 -->
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-tomcat</artifactId>
-        <scope>provided</scope>
-    </dependency>
-
-    <!-- Servlet API -->
-    <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <scope>provided</scope>
-    </dependency>
-
-    <!-- JSP 및 JSTL -->
-    <dependency>
-        <groupId>org.apache.tomcat.embed</groupId>
-        <artifactId>tomcat-embed-jasper</artifactId>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>jstl</artifactId>
-    </dependency>
-    
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+   <modelVersion>4.0.0</modelVersion>
+   <parent>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-parent</artifactId>
+      <version>2.7.2</version>
+      <relativePath/> <!-- lookup parent from repository -->
+   </parent>
+   <groupId>com.cm</groupId>
+   <artifactId>personalProject</artifactId>
+   <version>0.0.1-SNAPSHOT</version>
+   <packaging>jar</packaging>
+   <name>personalProject</name>
+   <description>Social Login for Spring Boot</description>
+   <properties>
+      <java.version>1.8</java.version>
+   </properties>
+   <dependencies>
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-data-jpa</artifactId>
+<!--          <exclusions>
+            <exclusion>
+               <groupId>org.hibernate</groupId>
+               <artifactId>hibernate-core</artifactId>
+           </exclusion>
+       </exclusions> -->
       </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-web</artifactId>
       </dependency>
+       
+      <!-- aws배포를 위한 설정 -->
+      <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-tomcat</artifactId>
+           <scope>provided</scope>
+      </dependency> 
 
       <dependency>
          <groupId>org.springframework.boot</groupId>
@@ -82,10 +56,7 @@
          <artifactId>spring-boot-starter-test</artifactId>
          <scope>test</scope>
       </dependency>
-
-
-
-      <!-- ======================================================================= -->
+      
       <!-- JDBC : spring-boot-starter-jdbc 를 사용_MVC 와 다름 -->
       <dependency>
          <groupId>org.springframework.boot</groupId>
@@ -110,71 +81,50 @@
          <version>1.2</version>
       </dependency>
 
-     <!--  ** Spring Boot Security  -->
+      <!-- ** Spring Boot Security -->
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-security</artifactId>
       </dependency>
 
-	<!-- REST API ~~~~~~~~~ https://mvnrepository.com/artifact/com.google.code.gson/gson 
-         -> gson : Java객체 -> JSON Type & JSON Type -> Java객체  -->
+      <!-- REST API ~~~~~~~~~ https://mvnrepository.com/artifact/com.google.code.gson/gson 
+         -> gson : Java객체 -> JSON Type & JSON Type -> Java객체 -->
       <dependency>
          <groupId>com.google.code.gson</groupId>
          <artifactId>gson</artifactId>
          <version>2.8.5</version>
       </dependency>
-      
-      <dependency>
-    <groupId>com.googlecode.json-simple</groupId>
-    <artifactId>json-simple</artifactId>
-    <version>1.1.1</version>
-</dependency>
 
       <!-- Mail Sender -->
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-mail</artifactId>
       </dependency>
-
-      <!-- =================================================================================== -->
-
-
-<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
-
-		<!-- JSP -->
-		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-jasper</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-		</dependency>
-
+      
+      <dependency>
+         <groupId>org.hsqldb</groupId>
+         <artifactId>hsqldb</artifactId>
+         <scope>runtime</scope>
+     </dependency>
+      
+      
    </dependencies>
-	 <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                        <configuration>
-                            <packagingExcludes>
-                                <exclude>org/projectlombok/lombok</exclude>
-                            </packagingExcludes>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+
+   <build>
+      <plugins>
+         <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <configuration>
+               <excludes>
+                  <exclude>
+                     <groupId>org.projectlombok</groupId>
+                     <artifactId>lombok</artifactId>
+                  </exclude>
+               </excludes>
+            </configuration>
+         </plugin>
+      </plugins>
+   </build>
+
 </project>
