--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,22 +2,32 @@ server.address=0.0.0.0
 server.port=8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://52.79.239.179:3306/social?useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://52.79.239.179:3306/social?serverTimezone=Asia/Seoul
 spring.datasource.username=social
 spring.datasource.password=mysql
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
+spring.profiles.include=oauth, real-db
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.session.store-type=jdbc
+
+#spring.jpa.show-sql=true
+spring.h2.console.enabled=true
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # MySQL Dialect \uc124\uc815
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-server.servlet.context-path=/social
+#server.servlet.context-path=/social
 
-logging.level.org.springframework=debug
-logging.level.org.springframework.web=debug
+#logging.level.org.springframework=debug
+#logging.level.org.springframework.web=debug
+
+spring.jpa.hibernate.ddl-auto=create
+logging.level.org.hibernate.SQL=debug
+
+
 
