--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.address=0.0.0.0
 server.port=8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://52.79.239.179:3306/social?serverTimezone=Asia/Seoul
-spring.datasource.username=social
+spring.datasource.url=jdbc:mysql://localhost:3306/social?serverTimezone=Asia/Seoul
+spring.datasource.username=root
 spring.datasource.password=mysql
 
 #spring.jpa.hibernate.ddl-auto=update
