--- a/pom.xml
+++ b/pom.xml
@@ -1,32 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-   <parent>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-parent</artifactId>
-      <version>2.7.2</version>
-      <relativePath/> <!-- lookup parent from repository -->
-   </parent>
-   <groupId>com.cm</groupId>
-   <artifactId>personalProject</artifactId>
-   <version>0.0.1-SNAPSHOT</version>
-   <packaging>jar</packaging>
-   <name>personalProject</name>
-   <description>Social Login for Spring Boot</description>
-   <properties>
-      <java.version>1.8</java.version>
-   </properties>
-   <dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.7.2</version>
+		<relativePath /> <!-- lookup parent from repository -->
+	</parent>
+	<groupId>com.cm</groupId>
+	<artifactId>personalProject</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<name>personalProject</name>
+	<description>Social Login for Spring Boot</description>
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>
+	<dependencies>
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-data-jpa</artifactId>
-<!--          <exclusions>
-            <exclusion>
-               <groupId>org.hibernate</groupId>
-               <artifactId>hibernate-core</artifactId>
-           </exclusion>
-       </exclusions> -->
       </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
@@ -107,6 +102,15 @@
          <scope>runtime</scope>
      </dependency>
       
+      <!-- queryDSL -->
+      <dependency>
+        <groupId>com.querydsl</groupId>
+         <artifactId>querydsl-apt</artifactId>
+     </dependency>
+     <dependency>
+        <groupId>com.querydsl</groupId>
+        <artifactId>querydsl-jpa</artifactId>
+     </dependency>
       
    </dependencies>
 
@@ -124,8 +128,24 @@
                </excludes>
             </configuration>
          </plugin>
+         <plugin>
+             <groupId>com.mysema.maven</groupId>
+             <artifactId>apt-maven-plugin</artifactId>
+             <version>1.1.3</version>
+             <executions>
+                 <execution>
+                     <goals>
+                         <goal>process</goal>
+                     </goals>
+                     <configuration>
+                         <outputDirectory>src/main/generated</outputDirectory>
+                         <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+                     </configuration>
+                 </execution>
+             </executions>
+         </plugin>
       </plugins>
    </build>
-   
+
 
 </project>
