--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,33 +1,19 @@
-server.address=0.0.0.0
+# \ud3ec\ud2b8 \ubc0f \uc8fc\uc18c \uc124\uc815
 server.port=8080
+#server.address=0.0.0.0
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/social?serverTimezone=Asia/Seoul
+# MySQL \ub370\uc774\ud130\ubca0\uc774\uc2a4 \uc5f0\uacb0 \uc815\ubcf4
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/social?useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=mysql
 
-#spring.jpa.hibernate.ddl-auto=update
+# Hibernate \uc124\uc815
+spring.datasource.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-spring.profiles.include=oauth, real-db
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.session.store-type=jdbc
+spring.jpa.show-sql=true
 
-#spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-
+# View \uc124\uc815
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-
-# MySQL Dialect \uc124\uc815
-#hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-#server.servlet.context-path=/social
-
-#logging.level.org.springframework=debug
-#logging.level.org.springframework.web=debug
-
-spring.jpa.hibernate.ddl-auto=create
-logging.level.org.hibernate.SQL=debug
-
-
-
