--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,10 @@ spring:
         hibernate:
           format_sql: true
           dialect: org.hibernate.dialect.MySQLDialect
+          database: mysql
+          database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: true
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
   mvc:
     view:
